@@ -8,6 +8,9 @@ Revision history for Hailo
       Strawberry Perl + dmake, see report
       07242729-b19f-3f77-b713-d32bba55d77f.
 
+    - Skip t/storage/001_meta/switch-order.t on OpenBSD where it's
+      known to fail, see report 07172161-b19f-3f77-b713-d32bba55d77f.
+
 0.42 2010-05-10 21:26:45
 
     - Hailo should now work on Windows. Dependency on two modules that
